--- a/P_Bulle_Docker - ASP.NET/P_Bulle_Docker.csproj
+++ b/P_Bulle_Docker - ASP.NET/P_Bulle_Docker.csproj
@@ -10,7 +10,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Aspose.HTML" Version="24.1.0" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.15.1" />
+    <PackageReference Include="MySql.Data" Version="8.3.0" />
   </ItemGroup>
 
 </Project>
