--- a/P_Bulle_Docker - ASP.NET/docker-compose.yml
+++ b/P_Bulle_Docker - ASP.NET/docker-compose.yml
@@ -1,14 +1,11 @@
 services:
   db:
-    image: mysql
+    build:
+      context: ../Database
+      dockerfile: Dockerfile
     container_name: mysql
     ports:
       - '3306:3306'
-    expose:
-      - 3306
-    environment:
-      - ENV MYSQL_ROOT_PASSWORD=root
-      - ENV MYSQL_DATABASE=mysqldatabaser
     volumes:
       - my-db:/var/lib/mysql
   webapp:
@@ -18,6 +15,8 @@ services:
     container_name: application
     depends_on:
       - db
+    ports:
+      - "8080:80"
   test:
     build:
       context: ../TestUnitaire/test
